--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.4.0",
     "@react-navigation/native": "^6.1.7",
+    "@tamagui/alert-dialog": "^1.99.1",
     "@tamagui/font-inter": "1.74.8",
     "@tamagui/react-native-media-driver": "1.74.8",
     "@tamagui/shorthands": "1.74.8",
     "@tamagui/themes": "1.74.8",
     "axios": "^1.6.8",
+    "burnt": "^0.12.2",
     "expo": "^50.0.17",
+    "expo-build-properties": "~0.11.1",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
