--- a/package.json
+++ b/package.json
@@ -8,11 +8,28 @@
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "ios": "expo start --ios",
     "start": "expo start",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js",
+      "!**/.expo/**"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.4.0",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@tamagui/alert-dialog": "^1.99.1",
     "@tamagui/font-inter": "1.74.8",
@@ -20,7 +37,7 @@
     "@tamagui/shorthands": "1.74.8",
     "@tamagui/themes": "1.74.8",
     "axios": "^1.6.8",
-    "burnt": "^0.12.2",
+    "core-js": "^3.37.1",
     "expo": "^50.0.17",
     "expo-build-properties": "~0.11.1",
     "expo-constants": "~15.4.5",
@@ -31,6 +48,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
@@ -40,6 +58,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "tamagui": "1.74.8",
     "yup": "^1.4.0"
@@ -47,12 +66,19 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tamagui/babel-plugin": "1.74.8",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.14",
+    "@types/react-test-renderer": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.4",
     "prettier": "^3.2.5",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.4.5"
   },
   "eslintConfig": {
