--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/core": "^7.20.0",
     "@tamagui/babel-plugin": "1.74.8",
     "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/react-native": "^12.5.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.14",
@@ -79,6 +80,7 @@
     "jest-expo": "^50.0.4",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   },
   "eslintConfig": {
