--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       "!**/babel.config.js",
       "!**/jest.setup.js",
       "!**/.expo/**"
+    ],
+    "coveragePathIgnorePatterns": [
+      ".*_layout\\.tsx$",
+      "expo-env\\.d\\.ts"
     ]
   },
   "dependencies": {
@@ -55,6 +59,7 @@
     "react-native": "0.73.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-multiple-select": "^0.5.12",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
