--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-hook-form": "^7.51.4",
     "react-native": "0.73.6",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-multiple-select": "^0.5.12",
